web/src/components/dev/Theming.css
body {
  background-color: #ffffff;
  color: #000;
}

body[data-theme='dark'] {
  background-color: #1e1e1e;
  color: #fff;
}

.menu {
  position: fixed;
  bottom: 1rem;
  right: 1rem;
  z-index: 1000;
}

.menu button {
  height: 3em;
  width: 3em;
  border: none;
  padding: 0.5rem;
  border-radius: 50%;
  cursor: pointer;
  font-size: 1rem;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
  transition: background-color 0.2s ease;
}

.menu .tooltip {
  visibility: hidden;
  opacity: 0;
  background-color: var(--background-highlight);
  color: var(--text-primary);
  text-align: right;
  border-radius: 6px;
  padding: 5px 8px;
  position: absolute;
  z-index: 1;
  bottom: 125%;
  right: -25%;
  transition: opacity 0.3s ease;
  white-space: nowrap;
}

.menu button:hover .tooltip {
  visibility: visible;
  opacity: 1;
}

